--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
   <h1>At Yarışı Tahmin Uygulaması</h1>
+  
   <input type="text" id="horseInput" placeholder="At isimlerini gir (virgülle ayır)">
+  <br>
   <button onclick="tahminEt()">Tahmin Et</button>
-  <p id="sonuc"></p>
+  <button onclick="temizle()">Temizle</button>
+
+  <ul id="sonucListesi"></ul>
 
   <script src="script.js"></script>
 </body>
